--- a/catalog.html
+++ b/catalog.html
@@ -1,1 +1,173 @@
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Барбершоп</title>
+  </head>
+  <body>
+  	<header>
+  	<nav>
+  		<a href="index.html">
+  			<img class="logo" alt="Логотип Барбершопа" src="https://via.placeholder.com/205x35">
+  		</a>
+  		<ul>
+  			<li><a href="">Информация</a></li>
+  			<li><a href="">Новости</a></li>
+  			<li><a href="">Прайс-лист</a></li>
+  			<li><a href="">Магазин</a></li>
+  			<li><a href="">Контакты</a></li>
+  		</ul>
+  		<ul>
+  			<li><a href="">Вход</a></li>
+  		</ul>
+  	</nav>
+  	</header>
+  	<main>
+  		<h1>Средства для ухода</h1>
+  		<ul>
+  			<li><a href="index.html">Главная</a></li>
+  			<li><a href="catalog.html">Магазин</a></li>
+  			<li>Средства для ухода</li>
+  		</ul>
+  		<section>
+  			<h2>Фильтр Товаров</h2>
+  			<!-- Здесь будет форма -->
+  		</section>
 
+  		<section>
+  		<h2>Список средств для ухода</h2>
+  		<ul>
+  			<li>
+  				<h3>
+  					<a href="">
+  						<span>Набор для путешествий</span><br>
+  						<span>"Baxter of California"</span>
+  					</a>
+  				</h3>
+  				<a href="#">
+  				<img src="https://via.placeholder.com/480x337" alt="Набор для путешествий Baxter of California">
+  				</a>
+  				<p>
+  					2900₽
+  					<a href="">Купить</a>
+  				</p>
+
+  			</li>
+
+  			<li>
+  				<h3>
+  					<a href="">
+  						<span>Увлажняющий кондиционер</span><br>
+  						<span>«Baxter of California»</span>
+  					</a>
+  				</h3>
+  				<a href="#">
+  				<img src="https://via.placeholder.com/480x337" alt="Набор для путешествий «Baxter of California»">
+  				</a>
+  				<p>
+  					750₽
+  					<a href="">Купить</a>
+  				</p>
+
+  			</li>
+
+  			<li>
+  					<h3>
+  					<a href="">
+  						<span>Гель для волос</span><br>
+  						<span>«SUAVECITO»</span>
+  					</a>
+  				</h3>
+  				<a href="#">
+  				<img src="https://via.placeholder.com/480x337" alt="Гель для волос «SUAVECITO»">
+  				</a>
+  				<p>
+  					290₽
+  					<a href="">Купить</a>
+  				</p>
+
+  			</li>
+
+			<li>
+  				<h3>
+  					<a href="">
+  						<span>Глина для укладки волос</span><br>
+  						<span>«American crew»</span>
+  					</a>
+  				</h3>
+  				<a href="#">
+  				<img src="https://via.placeholder.com/480x337" alt="Глина для укладки волос «Americancrew»">
+  				</a>
+  				<p>
+  					500₽
+  					<a href="">Купить</a>
+  				</p>
+
+  			</li>
+
+			<li>
+  				<h3>
+  					<a href="">
+  						<span>Гель для волос</span><br>
+  						<span>«American crew»</span>
+  					</a>
+  				</h3>
+  				<a href="#">
+  				<img src="https://via.placeholder.com/480x337" alt="Гель для волос «American crew»">
+  				</a>
+  				<p>
+  					300₽
+  					<a href="">Купить</a>
+  				</p>
+
+  			</li>
+
+  			<li>
+  				<h3>
+  					<a href="">
+  						<span>Набор для бритья</span><br>
+  						<span>«Baxter of California»</span>
+  					</a>
+  				</h3>
+  				<a href="#">
+  				<img src="https://via.placeholder.com/480x337" alt="Набор для бритья «Baxter of California»">
+  				</a>
+  				<p>
+  					3900₽
+  					<a href="">Купить</a>
+  				</p>
+
+  			</li>
+
+  			</ul>
+  		</section>
+  		<section>
+  			<ul>
+  				<li><a href="">1</a></li>
+  				<li>2</li>
+  				<li><a href="">3</a></li>
+  				<li><a href="">4</a></li>
+  			</ul>
+  		</section>
+  	</main>
+  	<footer>
+  		<p>
+  			БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+			АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+			<a href="">КАК НАС НАЙТИ?</a><br>
+			ТЕЛЕФОН: +7 (495) 666-02-66
+  		</p>
+  		<div>
+        <p>Давайте дружить!</p>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p>
+        Разработано: <a href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+  	</footer>
+  </body>
+</html>
