--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Барбершоп</title>
+  </head>
+  <body>
+    <header>
+  	<nav>
+  		<a href="index.html">
+  			<img class="logo" alt="Логотип Барбершопа" src="https://via.placeholder.com/205x35">
+  		</a>
+  		<ul>
+  			<li><a href="">Информация</a></li>
+  			<li><a href="">Новости</a></li>
+  			<li><a href="">Прайс-лист</a></li>
+  			<li><a href="">Магазин</a></li>
+  			<li><a href="">Контакты</a></li>
+  		</ul>
+  		<ul>
+  			<li><a href="">Вход</a></li>
+  		</ul>
+  	</nav>
+  	</header>
+  	<main>
+  		<h1>Набор для путешествий «Baxter of California»</h1>
+  		<ul>
+  			<li><a href="index.html">Главная</a></li>
+  			<li><a href="catalog.html">Магазин</a></li>
+  			<li><a href="">Средства для ухода<a></li>
+  			<li><a>Набор для путешествий «Baxter of California»</a></li>
+  		</ul>
+  		<section>
+  			<h2>Изображения товара</h2>
+  			<ul>
+  			<li><img src="https://via.placeholder.com/460x498" alt="Фото всего товара"></li>
+  			<li><img src="https://via.placeholder.com/140x149" alt="Первое фото"></li>
+  			<li><img src="https://via.placeholder.com/140x149" alt="Второе фото"></li>
+  			<li><img src="https://via.placeholder.com/140x149" alt="Третье фото"></li>
+  			</ul>
+  		</section>
+  		<section>
+  			<h2>Описание товара</h2>
+  			<span>Есть в наличии</span>
+  			<span>Артикул:DEXTER-AE</span>
+  			<p>Travel Kit – необходимый аксессуар во время любого<br> путешествия. В аккуратной кожаной сумке находится все, что<br> нужно для бритья и ухода за кожей во время рабочей поездки<br> или отдыха: средство для умывания, увлажняющий крем, крем<br> для бритья, крем после бритья, шампунь. Набор также может<br> стать отличным подарком.</p>
 
+  			<p>
+  				2900₽
+  				<a href="">Купить</a>
+  			</p>
+
+  			<span>В набор входят:</span>
+  			<ul>
+  				<li>Средство для умывания (50 мл)</li>
+  				<li>Увлажняющий крем (50 мл)</li>
+  				<li>Крем для бритья (50 мл)</li>
+  				<li>Крем после бритья, шампунь (50 мл)</li>
+  				<li>Удобная кожаная косметичка</li>
+  			</ul>
+  		</section>	
+  	</main>
+  	<footer>
+  		<p>
+  			БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+			АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+			<a href="">КАК НАС НАЙТИ?</a><br>
+			ТЕЛЕФОН: +7 (495) 666-02-66
+  		</p>
+  		<div>
+        <p>Давайте дружить!</p>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p>
+        Разработано: <a href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+  	</footer>
+  </body>
+</html>
