Добавил контентные изображения

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
     <header>
   	<nav>
   		<a href="index.html">
-  			<img class="logo" alt="Логотип Барбершопа" src="https://via.placeholder.com/205x35">
+  			<img class="logo" alt="Логотип Барбершопа" src="img/svg-barbershop/logo.svg">
   		</a>
   		<ul>
   			<li><a href="">Информация</a></li>
@@ -33,10 +33,10 @@
   		<section>
   			<h2>Изображения товара</h2>
   			<ul>
-  			<li><img src="https://via.placeholder.com/460x498" alt="Фото всего товара"></li>
-  			<li><img src="https://via.placeholder.com/140x149" alt="Первое фото"></li>
-  			<li><img src="https://via.placeholder.com/140x149" alt="Второе фото"></li>
-  			<li><img src="https://via.placeholder.com/140x149" alt="Третье фото"></li>
+  			<li><img src="img/product-big.jpg" alt="Фото всего товара"></li>
+  			<li><img src="img/product-1.jpg" alt="Первое фото"></li>
+  			<li><img src="img/product-2.jpg" alt="Второе фото"></li>
+  			<li><img src="img/product-3.jpg" alt="Третье фото"></li>
   			</ul>
   		</section>
   		<section>
