--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
   					</a>
   				</h3>
   				<a href="#">
-  				<img src="https://via.placeholder.com/480x337" alt="Набор для путешествий Baxter of California">
+  				<img src="img/product-small-1.jpg" alt="Набор для путешествий Baxter of California">
   				</a>
   				<p>
   					2900₽
@@ -62,7 +62,7 @@
   					</a>
   				</h3>
   				<a href="#">
-  				<img src="https://via.placeholder.com/480x337" alt="Набор для путешествий «Baxter of California»">
+  				<img src="img/product-small-2.jpg" alt="Набор для путешествий «Baxter of California»">
   				</a>
   				<p>
   					750₽
@@ -79,7 +79,7 @@
   					</a>
   				</h3>
   				<a href="#">
-  				<img src="https://via.placeholder.com/480x337" alt="Гель для волос «SUAVECITO»">
+  				<img src="img/product-small-3.jpg" alt="Гель для волос «SUAVECITO»">
   				</a>
   				<p>
   					290₽
@@ -96,7 +96,7 @@
   					</a>
   				</h3>
   				<a href="#">
-  				<img src="https://via.placeholder.com/480x337" alt="Глина для укладки волос «Americancrew»">
+  				<img src="img/product-small-4.jpg" alt="Глина для укладки волос «Americancrew»">
   				</a>
   				<p>
   					500₽
@@ -113,7 +113,7 @@
   					</a>
   				</h3>
   				<a href="#">
-  				<img src="https://via.placeholder.com/480x337" alt="Гель для волос «American crew»">
+  				<img src="img/product-small-5.jpg" alt="Гель для волос «American crew»">
   				</a>
   				<p>
   					300₽
@@ -130,7 +130,7 @@
   					</a>
   				</h3>
   				<a href="#">
-  				<img src="https://via.placeholder.com/480x337" alt="Набор для бритья «Baxter of California»">
+  				<img src="img/product-small-6.jpg" alt="Набор для бритья «Baxter of California»">
   				</a>
   				<p>
   					3900₽
