--- a/catalog-item.html
+++ b/catalog-item.html
@@ -5,13 +5,13 @@
   <title>Барбершоп «Бородинский»</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="inner-page">
 
 <header class="main-header">
-  <nav class="main-navigation">
+  <nav class="main-navigation container">
     <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
     </a>
@@ -39,49 +39,53 @@
     <li class="breadcrumbs-current">Набор для путешествий «Baxter of California»</li>
   </ul>
 
-  <section class="product-photos">
-    <h2 class="visually-hidden">Изображения товара</h2>
-    <p class="product-photo-full">
-      <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
-    </p>
-    <ul class="product-photo-preview">
-      <li>
-        <img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас">
-      </li>
-      <li>
-        <img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль">
-      </li>
-      <li>
-        <img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части">
-      </li>
-    </ul>
-  </section>
+  <div class="catalog-columns">
 
-  <section class="product-info">
-    <h2 class="visually-hidden">Описание товара</h2>
-    <div class="product-description">
-      <p class="product-availability">Есть в наличии</p>
-      <p class="product-article">Артикул: dexter-ae</p>
-    </div>
-    <p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-    <p class="product-price">
-      <b>2 900 ₽</b>
-      <a class="button" href="#">Купить</a>
-    </p>
-    <h3>В набор входят:</h3>
-    <ul>
-      <li>Средство для умывания (50 мл)</li>
-      <li>Увлажняющий крем (50 мл)</li>
-      <li>Крем для бритья (50 мл)</li>
-      <li>Крем после бритья, шампунь (50 мл)</li>
-      <li>Удобная кожаная косметичка</li>
-    </ul>
-  </section>
-
+    <section class="product-photos">
+      <h2 class="visually-hidden">Изображения товара</h2>
+      <p class="product-photo-full">
+        <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+      </p>
+      <ul class="product-photo-preview">
+        <li>
+          <img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас">
+        </li>
+        <li>
+          <img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль">
+        </li>
+        <li>
+          <img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части">
+        </li>
+      </ul>
+    </section>
+  
+    <section class="product-info">
+      <h2 class="visually-hidden">Описание товара</h2>
+      <div class="product-description">
+        <p class="product-availability">Есть в наличии</p>
+        <p class="product-article">Артикул: dexter-ae</p>
+      </div>
+      <p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+      <p class="product-price">
+        <b>2 900 ₽</b>
+        <a class="button" href="#">Купить</a>
+      </p>
+      <h3>В набор входят:</h3>
+      <ul>
+        <li>Средство для умывания (50 мл)</li>
+        <li>Увлажняющий крем (50 мл)</li>
+        <li>Крем для бритья (50 мл)</li>
+        <li>Крем после бритья, шампунь (50 мл)</li>
+        <li>Удобная кожаная косметичка</li>
+      </ul>
+    </section>
+  </div>
+    
 </main>
 
 <footer class="main-footer">
-  <p class="footer-contacts">
+  <div class="container">
+    <p class="footer-contacts">
     Барбершоп «Бородинский»<br>
     Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
     <a href="map.html">Как нас найти?</a><br>
@@ -98,32 +102,8 @@
   <p class="footer-copyright">
     <b>Разработано:</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
   </p>
+  </div>
 </footer>
-
-<section class="modal modal-login">
-  <h2>Личный кабинет</h2>
-  <p>Введите свой логин и пароль.</p>
-  <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-    <p>
-      <label class="visually-hidden" for="user-login">Логин</label>
-      <input class="login-icon-user" id="user-login" type="text" name="login" placeholder="email@example.com">
-    </p>
-    <p>
-      <label class="visually-hidden" for="user-password">Пароль</label>
-      <input class="login-icon-password" id="user-password" type="password" name="password" placeholder="••••••••">
-    </p>
-    <p class="login-password-info">
-      <label class="login-checkbox">
-        <input type="checkbox" name="remember" class="visually-hidden">
-        <span class="checkbox-indicator"></span>
-        Запомните меня
-      </label>
-      <a class="restore" href="#">Я забыл пароль!</a>
-    </p>
-    <button class="button" type="submit">Войти</button>
-  </form>
-  <button class="modal-close" type="button">Закрыть</button>
-</section>
 
 </body>
 </html>
