--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 <body class="inner-page">
 
 <header class="main-header">
-  <nav class="main-navigation">
+  <nav class="main-navigation container">
     <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
     </a>
@@ -31,7 +31,7 @@
 <main class="container">
 
   <h1 class="page-title">Cредства для ухода</h1>
-
+  
   <ul class="breadcrumbs">
     <li>
       <a href="index.html">Главная</a>
@@ -41,8 +41,10 @@
     </li>
     <li class="breadcrumbs-current">Средства для ухода</li>
   </ul>
-
-  <section class="filters">
+  
+  <div class="catalog-columns">
+  
+    <section class="filters">
     <h2 class="visually-hidden">Фильтр товаров</h2>
     <form class="filter" method="get" action="https://echo.htmlacademy.ru">
       <fieldset>
@@ -65,7 +67,7 @@
             <label for="filter-malin-goetz">Malin+Goetz</label>
           </li>
           <li class="filter-option">
-            <input class="visually-hidden filter-input filter-input-checkbox" disabled type="checkbox" name="murrays" id="filter-murrays">
+            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays" id="filter-murrays">
             <label for="filter-murrays">Murray’s</label>
           </li>
           <li class="filter-option">
@@ -180,7 +182,7 @@
             <span class="catalog-item-title">«Baxter of California»</span>
           </h3>
           <p class="catalog-item-image">
-            <img src="img/" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+            <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
           </p>
         </a>
         <p class="catalog-item-price">
@@ -196,11 +198,12 @@
       <li class="pagination-item"><a href="#">4</a></li>
     </ul>
   </section>
-
-</main>
+  </div>
+</main>  
 
 <footer class="main-footer">
-  <p class="footer-contacts">
+  <div class="container">
+    <p class="footer-contacts">
     Барбершоп «Бородинский»<br>
     Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
     <a href="map.html">Как нас найти?</a><br>
@@ -217,32 +220,8 @@
   <p class="footer-copyright">
     <b>Разработано:</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
   </p>
+  </div>
 </footer>
-
-<section class="modal modal-login">
-  <h2>Личный кабинет</h2>
-  <p>Введите свой логин и пароль.</p>
-  <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-    <p>
-      <label class="visually-hidden" for="user-login">Логин</label>
-      <input class="login-icon-user" id="user-login" type="text" name="login" placeholder="email@example.com">
-    </p>
-    <p>
-      <label class="visually-hidden" for="user-password">Пароль</label>
-      <input class="login-icon-password" id="user-password" type="password" name="password" placeholder="••••••••">
-    </p>
-    <p class="login-password-info">
-      <label class="login-checkbox">
-        <input type="checkbox" name="remember" class="visually-hidden">
-        <span class="checkbox-indicator"></span>
-        Запомните меня
-      </label>
-      <a class="restore" href="#">Я забыл пароль!</a>
-    </p>
-    <button class="button" type="submit">Войти</button>
-  </form>
-  <button class="modal-close" type="button">Закрыть</button>
-</section>
 
 </body>
 </html>
